kubernetes/script/docker-registry/ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-ui
  namespace: docker-registry
  labels:
    app: registry-ui
spec:
  replicas: 1 #副本数
  revisionHistoryLimit: 2 # 历史记录保留的个数，方便快速回滚
  selector:
    matchLabels:
      app: registry-ui
  template:
    metadata:
      labels:
        app: registry-ui
    spec:
      containers:
      - name: registry-ui
        image: joxit/docker-registry-ui:2.0.9
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
      volumes: #配置挂载
        - name: nginx-env # 应用配置挂载
          configMap:
            name: nginx-env
---
apiVersion: v1
kind: Service
metadata:
  name: registry-ui
  namespace: docker-registry
spec:
  type: ClusterIP
  ports:
      - port: 80
        targetPort: 80
        protocol: TCP
  selector:
    app: registry-ui

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: registry-ui
  namespace: docker-registry
spec:
  rules:
    - host: registry.atai.ui
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: registry-ui
                port:
                  number: 80
